fixed input box alignment on contact page

--- a/css/styles.css
+++ b/css/styles.css
@@ -181,6 +181,19 @@ h3{
 
 }
 
+label
+{
+  display: inline-block;
+  width: 150px;
+}
+
+input[type="text"]
+{
+    display: inline-block;
+    margin-bottom: 5px;
+    margin-left: 5px
+}
+
   .grid__item:last-child {
      grid-column: 3 / 3;
      grid-row: 1 / 3;
